# polling_FHE

./: Dockerfile  README.md  build.gradle  docker-compose.yml  settings.gradle  test.py
cpp-service/: CMakeLists.txt  Dockerfile  base64.cpp  base64.h  main.cpp
fhe-service/: Dockerfile  index.js  package-lock.json  package.json  public_key.txt  secret_key.txt
src/frontend/: package.json  webpack.config.js
src/frontend/src/: index.js
src/main/java/group6/PollingWithHE/: Blog.java  BlogController.java  BlogRespository.java  PageController.java  PollingWithHeApplication.java  SealController.java
src/main/java/group6/PollingWithHE/CPP/: SEALLibrary.java
src/main/java/group6/PollingWithHE/DTOs/: AddToCiphertextRequest.java  DecryptRequest.java  EncryptRequest.java  OptionDTO.java  OptionResult.java  PollDTO.java  PollDetailsResponse.java  PollResponse.java  QuestionDTO.java  QuestionResultResponse.java  SecretKeyRequest.java  StoreEncryptedResultRequest.java
src/main/java/group6/PollingWithHE/Encryption/: SEALService.java
src/main/java/group6/PollingWithHE/Entities/: Option.java  Poll.java  PollOption.java  (+2 more)
src/main/resources/: Init.sql  Untitled.sql  application.properties
src/main/resources/CPP/: libsealwrapper.dylib  sealwrapper.cpp  编译wrapper库的命令
src/main/resources/CPP/darwin-aarch64/: libsealwrapper.dylib
src/main/resources/static/: create_poll.html  encryption_test.html  index.html  question.html
src/main/resources/templates/: create_poll.html  question.html  results.html
src/test/java/group6/PollingWithHE/: PollingWithHeApplicationTests.java
(+6 files in other folders)
